--- a/index.html
+++ b/index.html
@@ -9,14 +9,48 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <div class="navigation">
-    <div class="menuToggle">
+    <div class="menuToggle"></div>
+    <ul>
+      <li class="list active">
+        <a href="#"  style="--clr: #f44336;">
+        <span class="icon"><i class='bx bx-home'></i></span>
+        <span class="text">Home</span>
+      </a>
+      </li>
+      <li class="list">
+        <a href="#"  style="--clr: #ffa117;">
+        <span class="icon"><i class='bx bx-user' ></i></span>
+        <span class="text">About</span>
+      </a>
+      </li>
+      <li class="list">
+        <a href="#"  style="--clr: #0fc70f;">
+        <span class="icon"><i class='bx bx-message-rounded' ></i></span>
+        <span class="text">Messages</span>
+      </a>
+      </li>
+      <li class="list">
+        <a href="#"  style="--clr: #2396f3;">
+        <span class="icon"><i class='bx bx-camera' ></i></span>
+        <span class="text">Photos</span>
+      </a>
+      </li>
+      <li class="list">
+        <a href="#"  style="--clr: #b145e9;">
+        <span class="icon"><i class='bx bxs-cog' ></i></span>
+        <span class="text">Settings</span>
+      </a>
+      </li>
+      
+    </ul>
 
-    </div>
 
-    
   </div>
+
+  <script src="./script.js"></script>
 </body>
 </html>
